--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,10 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-white: #fff;
+    --spacing: 0.25rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -184,6 +188,9 @@
   .row-span-3 {
     grid-row: span 3 / span 3;
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
@@ -193,6 +200,12 @@
   .table {
     display: table;
   }
+  .max-w-50 {
+    max-width: calc(var(--spacing) * 50);
+  }
+  .max-w-full {
+    max-width: 100%;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
@@ -201,6 +214,9 @@
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .grid-cols-\[1fr_auto\] {
+    grid-template-columns: 1fr auto;
   }
   .grid-cols-\[minmax\(160px\,1fr\)_1fr_1fr\] {
     grid-template-columns: minmax(160px,1fr) 1fr 1fr;
@@ -214,9 +230,63 @@
   .grid-cols-\[minmax\(160px_1fr\)_1fr_1fr\] {
     grid-template-columns: minmax(160px 1fr) 1fr 1fr;
   }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
+  .gap-1\.5 {
+    gap: calc(var(--spacing) * 1.5);
+  }
+  .gap-7 {
+    gap: calc(var(--spacing) * 7);
+  }
+  .gap-7\.5 {
+    gap: calc(var(--spacing) * 7.5);
+  }
+  .rounded-\[5px\] {
+    border-radius: 5px;
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .bg-\[\#8844ee\] {
+    background-color: #8844ee;
+  }
+  .bg-\[rgba\(0\,0\,0\,\.1\)\] {
+    background-color: rgba(0,0,0,.1);
+  }
+  .bg-\[rgba\(0\,0\,01\)\] {
+    background-color: rgba(0,0,01);
+  }
+  .bg-\[linear-gradient\(135deg\,\#8844ee\,\#b07dfb\)\] {
+    background-image: linear-gradient(135deg,#8844ee,#b07dfb);
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-2\.5 {
+    padding: calc(var(--spacing) * 2.5);
+  }
+  .p-7 {
+    padding: calc(var(--spacing) * 7);
+  }
+  .p-7\.5 {
+    padding: calc(var(--spacing) * 7.5);
+  }
+  .text-\[1\.125em\] {
+    font-size: 1.125em;
+  }
+  .text-\[18px\] {
+    font-size: 18px;
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .underline {
     text-decoration-line: underline;
@@ -224,6 +294,79 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .transition-\[\.1s\] {
+    transition-property: .1s;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .transition-colors {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-100 {
+    --tw-duration: 100ms;
+    transition-duration: 100ms;
+  }
+  .hover\:bg-\[rgba\(0\,0\,0\,\.5\)\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: rgba(0,0,0,.5);
+      }
+    }
+  }
+  .\[\&_a\]\:block {
+    & a {
+      display: block;
+    }
+  }
+  .\[\&_a\]\:rounded-\[5px\] {
+    & a {
+      border-radius: 5px;
+    }
+  }
+  .\[\&_a\]\:bg-\[rgba\(0\,0\,0\,\.1\)\] {
+    & a {
+      background-color: rgba(0,0,0,.1);
+    }
+  }
+  .\[\&_a\]\:p-2\.5 {
+    & a {
+      padding: calc(var(--spacing) * 2.5);
+    }
+  }
+  .\[\&_a\]\:text-\[1\.125em\] {
+    & a {
+      font-size: 1.125em;
+    }
+  }
+  .\[\&_a\]\:text-white {
+    & a {
+      color: var(--color-white);
+    }
+  }
+  .\[\&_a\]\:transition-colors {
+    & a {
+      transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+      transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+      transition-duration: var(--tw-duration, var(--default-transition-duration));
+    }
+  }
+  .\[\&_a\]\:duration-100 {
+    & a {
+      --tw-duration: 100ms;
+      transition-duration: 100ms;
+    }
+  }
+  .\[\&_a\]\:hover\:bg-\[rgba\(0\,0\,0\,\.5\)\] {
+    & a {
+      &:hover {
+        @media (hover: hover) {
+          background-color: rgba(0,0,0,.5);
+        }
+      }
+    }
   }
 }
 @property --tw-border-style {
@@ -236,11 +379,16 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-outline-style: solid;
+      --tw-duration: initial;
     }
   }
 }
